calendar #644 fixed calendar settings dots not being aligned properly

--- a/src/linagora.esn.calendar/app/components/calendars-list/items/item/calendars-list-item.less
+++ b/src/linagora.esn.calendar/app/components/calendars-list/items/item/calendars-list-item.less
@@ -49,5 +49,9 @@
         opacity: 1;
       }
     }
+
+    .settings-overlay-dots {
+      padding-top: 15px;
+    }
   }
 }
